--- a/memories.html
+++ b/memories.html
@@ -147,12 +147,12 @@
   <!-- ===== Navigation ===== -->
   <header>
     <nav class="navbar">
-      <div class="logo">✨ Our Memories ✨</div>
+      <div class="logo">✨ Our New Year ✨</div>
       <div class="nav-links">
         <a href="index.html">Home</a>
-        <a href="#">New Year Message</a>
-        <a href="#">Memories Together</a>
-        <a href="#">Favorite Songs</a>
+        <a href="index.html#message">New Year Message</a>
+        <a href="memories.html">Memories Together</a>
+        <a href="index.html#songs">Favorite Songs</a>
       </div>
     </nav>
   </header>
