--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="nav-links">
         <a href="#home">Home</a>
         <a href="#message">New Year Message</a>
-        <a href="memories">Memories Together</a>
+        <a href="#memories">Memories Together</a>
         <a href="#songs">Favorite Songs</a>
       </div>
     </nav>
@@ -186,7 +186,21 @@
     </div>
   </section>
 
-  <!-- ===== Favorite Songs Section ==
+  <!-- ===== Memories Section ===== -->
+  <section id="memories">
+    <div class="container">
+      <div class="card">
+        <h2>Memories Together</h2>
+        <p>
+          From simple late-night talks to unforgettable adventures, every memory
+          with you is a treasure. This year reminded me that love isn’t about
+          perfection — it’s about choosing each other every day.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== Favorite Songs Section ===== -->
   <section id="songs">
     <div class="container">
       <div class="card">
