--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
   <section id="home" class="hero">
     <h1>Happy New Year, My Love ❤️</h1>
     <p>
-      Another year has passed, and another beautiful year begins with you.
-      This page is made just for you — a small reminder of how much you mean to me.
+      Another year, another memories to be shared. With you and only you. ILoveYOU
     </p>
   </section>
 
@@ -209,10 +208,13 @@
       <div class="card">
         <h2>My New Year Message</h2>
         <p>
-          As the fireworks light up the sky, I just want you to know that you are
-          the brightest part of my life. Thank you for every laugh, every memory,
-          and every moment we shared this past year. I’m excited to face another
-          year with you — hand in hand, heart to heart.
+        A lot of memory have gone past, here we are thriving and loving each other more than yesterday. Happy New Year to us and to everyone around us.
+        I'm so thankful kay God that he gave us another wonderful year together, I hope what we have today will carry on for many years to come, 
+        sana hindi ka magsawa sakin kahit minsan nagsasawa na ako sa sarili ko. I hope that this year we'll know each other more and more.
+
+        Each day that passes by lagi kong narerealize na mahal na mahal na mahal kita at mas lalo pa kitang mamahalin sa mga susunod pang araw, buwan, at taon.
+        I still love you as the day I saw you. Mahal kita kung sino ka sa nakaraan, sa ngayon, at mamahalin kita sa kinabukasan. 
+        I love you for everything that you do, denise and I will keep on doing what I do best, and mahalin ka.
         </p>
         <br />
         <p>
@@ -279,3 +281,4 @@
 
 </body>
 </html>
+
