--- a/index.html
+++ b/index.html
@@ -232,24 +232,23 @@
       <div class="card">
         <h2>Memories Together</h2>
         <p>
-          Every photo holds a moment, every moment holds a feeling. These are the
-          memories that make my heart smile whenever I think of us.
+          I cherish each photos we took together, but these ones are what I cherish the most.
         </p>
 
         <div class="gallery">
           <!-- Copy this block to add more photos -->
           <div class="memory-card">
-            <img src="memory1.jpg" alt="Memory 1">
+            <img src="love.jfif" alt="Memory 1">
             <div class="memory-caption">Our first photo together 💕</div>
           </div>
 
           <div class="memory-card">
-            <img src="memory2.jpg" alt="Memory 2">
+            <img src="love2.jfif" alt="Memory 2">
             <div class="memory-caption">A day I'll never forget ✨</div>
           </div>
 
           <div class="memory-card">
-            <img src="memory3.jpg" alt="Memory 3">
+            <img src="love3.jfif" alt="Memory 3">
             <div class="memory-caption">Smiles that mean everything ❤️</div>
           </div>
         </div>
@@ -267,9 +266,9 @@
           continue to build together. Each melody feels like home.
         </p>
         <ul>
-          <li>🎵 <a href="https://open.spotify.com" target="_blank">Song Title 1</a></li>
-          <li>🎵 <a href="https://open.spotify.com" target="_blank">Song Title 2</a></li>
-          <li>🎵 <a href="https://open.spotify.com" target="_blank">Song Title 3</a></li>
+          <li>🎵 <a href="https://open.spotify.com/track/1lkvpmrCaXK8QtliFDcHBO?si=33c90cc15a7e4099">Bubbly - Colbie Caillat</a></li>
+          <li>🎵 <a href="https://open.spotify.com/track/7I1kle4TNmkfednJDKo8GR?si=8798695ab6da4442">If you want to - beabadoobe</a></li>
+          <li>🎵 <a href="https://open.spotify.com/track/41P6Tnd8KIHqON0QIydx6a?si=7f600c888c2d4a1b">The perfect pair - beabadoobee</a></li>
         </ul>
       </div>
     </div>
@@ -282,5 +281,6 @@
 
 </body>
 </html>
+
 
 
