--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
           <div class="memory-card">
             <img src="love3.jfif" alt="Memory 3">
-            <div class="memory-caption">Smiles that mean everything ❤️</div>
+            <div class="memory-caption">A kiss that means evrything ❤️</div>
           </div>
         </div>
       </div>
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
