--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
           continue to build together. Each melody feels like home.
         </p>
         <ul>
-          <li>🎵 <a href="https://open.spotify.com/track/1lkvpmrCaXK8QtliFDcHBO?si=33c90cc15a7e4099">Bubbly - Colbie Caillat</a></li>
-          <li>🎵 <a href="https://open.spotify.com/track/7I1kle4TNmkfednJDKo8GR?si=8798695ab6da4442">If you want to - beabadoobe</a></li>
-          <li>🎵 <a href="https://open.spotify.com/track/41P6Tnd8KIHqON0QIydx6a?si=7f600c888c2d4a1b">The perfect pair - beabadoobee</a></li>
+          <li>🎵 <a href="https://open.spotify.com/track/1lkvpmrCaXK8QtliFDcHBO?si=33c90cc15a7e4099">"Everytime I see your bubbly face, I get the tinglies in a silly place"</a></li>
+          <li>🎵 <a href="https://open.spotify.com/track/7I1kle4TNmkfednJDKo8GR?si=8798695ab6da4442">"'Cause if you want, you could stay with me in my bed"</a></li>
+          <li>🎵 <a href="https://open.spotify.com/track/3iBgrkexCzVuPy4O9vx7Mf?si=b4269b026da34dac">"Don't forget to kiss me or else you'll have to miss me"</a></li>
         </ul>
       </div>
     </div>
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
