--- a/index.html
+++ b/index.html
@@ -289,11 +289,12 @@
 
   <!-- ===== Footer ===== -->
   <footer>
-    <p>Made with ❤️ for you | New Year Theme</p>
+    <p>Made with ❤️ for you</p>
   </footer>
 
 </body>
 </html>
+
 
 
 
